--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
     "@auth/prisma-adapter": "^2.10.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.11.0",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
     "@vercel/analytics": "^1.5.0",
+    "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.20.1",
     "lucide-react": "^0.525.0",
+    "motion": "^12.23.0",
     "next": "15.3.4",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.1"
   },
