--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 
 # dependencies
 /node_modules
+./backend/node_modules
+./frontend/node_modules
 /.pnp
 .pnp.*
 .yarn/*
@@ -15,10 +17,14 @@
 
 # next.js
 /.next/
+./frontend/.next/
 /out/
 
 # production
 /build
+./frontend/build
+./backend/dist
+
 
 # misc
 .DS_Store
@@ -32,6 +38,8 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+./frontend/.env*
+./backend/.env*
 
 # vercel
 .vercel
