--- a/.gitignore
+++ b/.gitignore
@@ -2,44 +2,26 @@
 
 # dependencies
 /node_modules
-./backend/node_modules
-./frontend/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-
-# testing
-/coverage
-
+app/backend/node_modules
+app/frontend/node_modules
+#
 # next.js
-/.next/
-./frontend/.next/
-/out/
+app/frontend/.next/
+app/frontend/out/
 
 # production
-/build
-./frontend/build
-./backend/dist
+app/frontend/build
+app/backend/dist
 
 
 # misc
 .DS_Store
 *.pem
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-
 # env files (can opt-in for committing if needed)
 .env*
-./frontend/.env*
-./backend/.env*
+app/frontend/.env*
+app/backend/.env*
 
 # vercel
 .vercel
