--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -12,6 +12,8 @@
     "@auth/prisma-adapter": "^2.10.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.11.0",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
